@@ -1,4 +1,5 @@
 - EVOL: Add proxy support (via HTTP(S)_PROXY environment variables), thanks @iamhsa 
+- FIX: dual result now display ok/total per view (not the cumulative one)
 
 2.2.5.0 (31/01/2020)
 - EVOL:
